fixed bottom of layour being too long

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,8 +1,8 @@
 body {
     margin: 0;
     color: #222222;
-    height: 110vw;
-    width: 110vh;
+    height: 110vh;
+    width: 100vw;
     font-family: Arial, Helvetica, sans-serif;
     overflow-y: scroll;
     background-color: #e5e9f0;
@@ -44,13 +44,16 @@ body {
 }
 
 .fader-left {
-    position: relative;
+    position: fixed;
+    left: 16vw;
     background: linear-gradient(to right, #d8dee9 0%, #e5e9f0 100%);
     width: 3%;
     height: 120%;
 }
 
 .fader-right {
+    position: fixed;
+    right: 16vw;
     background: linear-gradient(to right, #e5e9f0 0%, #d8dee9 100%);
     width: 3%;
     height: 120%;
